# shu_catalog_scraper

./: .gitignore  README.md  catalog.html  pyproject.toml
catalog_scraper/: __init__.py  __main__.py  lib.py
