[tool.poetry]
name = "catalog-scraper"
version = "0.1.0"
description = ""
authors = ["seth shoemaker <contact@sethshoemaker.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
aiohttp = "^3.11.14"
beautifulsoup4 = "^4.13.3"
jsonpickle = "^4.0.2"
rich = "^13.9.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
